# vmc-hs

./: LICENSE  README.md  stack.yaml  vmc-hs.cabal
app/: Encoder.hs  Encodings.hs  PBEncoder.hs
input/: 01.in  02.in  11-1.in  11-2.in  11-3.in  11-4.in  11-5.in  11s-1.in  11s-2.in  11s-3.in  11s-4.in  11s-5.in  22-1.in  22-2.in  22-3.in  22-4.in  22-5.in  22s-1.in  22s-2.in  22s-3.in  22s-4.in  22s-5.in
lib/: Parser.hs  Problem.hs  Sat.hs  Server.hs  Types.hs  VM.hs
lib/Internal/: VM.hs
lib/Sat/: Encoder.hs  Encodings.hs  PBEncoder.hs
picosat/: Main.hs
sat/: Encoder.hs  Encodings.hs  Main.hs  PBEncoder.hs
src/: Parser.hs  Types.hs
