name:                vmc-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rodamber/vmc-hs
license:             MIT
license-file:        LICENSE
author:              Rodrigo Bernardo
maintainer:          rodrigoambernardo@gmail.com
copyright:           2017 Rodrigo Bernardo
category:            SAT
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib

  exposed-modules:     Types
                     , Parser
                     , Sat
                     , Sat.Encoder
                     , Sat.PBEncoder
                     , Sat.Encodings

  build-depends:       base >= 4.7 && < 5
                     , bimap
                     , text
                     , transformers
                     , trifecta

  default-language:    Haskell2010


executable picosat
  hs-source-dirs:      picosat
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , bimap
                     , picosat
                     , vmc-hs

  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vmc-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rodamber/vmc-hs
